--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -7,6 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#484E61">
+        <Button 
+            android:id="@+id/swich_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/abc_btn_switch_to_on_mtrl_00001"/>
         <TextView 
             android:id="@+id/city_name"
             android:layout_width="wrap_content"
@@ -14,6 +21,15 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp"/>
+        <Button 
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/abc_scrubber_primary_mtrl_alpha"
+            android:text="刷新"/>
     </RelativeLayout>
     
     <RelativeLayout 
